docs/examples/lombok/src/main/java/use/User.java
package use;

import lib.Foo;

public class User {
    Foo demo() {
        return Foo.builder()
                .x(null) // ok
                .y(null) // error
                .build();
    }
}
